cmake_minimum_required(VERSION 2.6)
project(knxcmd)
set(BOOST_ROOT /home/erik/Programming/boost_1_67_0)
find_package(Boost REQUIRED system regex)
find_package(Threads REQUIRED)
include_directories(${Boost_INCLUDE_DIRS})
add_executable(knxcmd main.cc states.cc knxconnection.cc channel.cc)
target_link_libraries(knxcmd Boost::regex Boost::system Threads::Threads)
